--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,25 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  font-size: 20px;
+  font-family: sans-serif;
+}
+
+body {
+  text-align: center;
+}
+
+#timer {
+  margin-top: 50px;
+}
+
 button {
   cursor: pointer;
+}
+
+#milliseconds  {
+
 }
